# CodePractise

./: README.md
Sort/: CMakeLists.txt  main.c  readme.md
Sort/headers/: BubbleSort.h  Common.h  CountingSort.h  DataChecker.h  HeapSort.h  InsertionSort.h  MergeSort.h  QuickSort.h  RadixSort.h  RandomArray.h  SelectionSort.h  ShellSort.h
Sort/sources/: BubbleSort.c  Common.c  CountingSort.c  DataChecker.c  HeapSort.c  InsertionSort.c  MergeSort.c  QuickSort.c  RadixSort.c  RandomArray.c  SelectionSort.c  ShellSort.c
